--- a/style.css
+++ b/style.css
@@ -1,1 +1,19 @@
 @charset "utf-8";
+
+/* base */
+body {
+    font-size: 14px;
+    line-height: 1.71;
+    letter-spacing: 0.05;
+    font-family: "Times New Roman", "YuMincho", "Hiragino Mincho ProN", "Yu Mincho", "MS PMincho", serif;
+}
+
+img {
+    width: 100%;
+    height: auto;
+}
+
+ul {
+    margin: 0;
+    padding: 0;
+}
