--- a/style.css
+++ b/style.css
@@ -23,3 +23,42 @@ ul {
     margin-left: auto;
     margin-right: auto;
 }
+
+/* header */
+header {
+    padding: 40px 0;
+}
+
+h1 {
+    font-size: 40px;
+    line-height: 1;
+    text-align: center;
+}
+
+
+/* visual */
+.visual .inner {
+    padding-top: 240px;
+    padding-bottom: 80px;
+    background-image: url(./images/bg_main.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+}
+
+.visual .text {
+    display: inline-block;
+    padding: 40px;
+    background-color: #FFFFFF;
+}
+
+.visual .text .recruiting {
+    font-size: 18px;
+    line-height: 1.66;
+}
+
+.visual .text .slogan {
+    margin-top: 30px;
+    font-size: 36px;
+    line-height: 1.39;
+}
